Fix images not showing issue
- Fix issue with images not displaying in 'Pattern Questions for Pattern.ipynb' file.

--- a/Pattern Questions for Practice.ipynb
+++ b/Pattern Questions for Practice.ipynb
@@ -111,13 +111,13 @@
    "id": "f61e6c74",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/7.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/7.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e3c0ca8",
+   "id": "47b2eadf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -143,13 +143,13 @@
    "id": "14228838",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/2.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/2.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b05613f",
+   "id": "ca0e39d2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,13 +175,13 @@
    "id": "41362bb8",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/4.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/4.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eccd9a20",
+   "id": "74958bc6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -207,13 +207,13 @@
    "id": "d1d6ad53",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/1.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/1.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79dcf3cf",
+   "id": "baaea2c1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -239,13 +239,13 @@
    "id": "c57fd3ca",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/3.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/3.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bad7245e",
+   "id": "679bcac2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -271,13 +271,13 @@
    "id": "5a4b2921",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/5.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/5.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fc7b3fa",
+   "id": "a035c3ac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -303,13 +303,13 @@
    "id": "497f3ebc",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/6.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/6.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ced83803",
+   "id": "b2ab87b3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -335,13 +335,13 @@
    "id": "93411290",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/8.jpg\" width=\"175\" height=\"175\">"
+    "<img align=left src=\"Pattern images/8.jpg\" width=\"175\" height=\"175\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "823ed2b5",
+   "id": "32aa1117",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -367,13 +367,13 @@
    "id": "bb33f9dc",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/9.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/9.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "870191fe",
+   "id": "42f88705",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -399,13 +399,13 @@
    "id": "5d66790e",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/10.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/10.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83e3dead",
+   "id": "ef53f51e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -431,13 +431,13 @@
    "id": "af125c38",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/11.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/11.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adbb05dc",
+   "id": "c0a11a4e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -463,13 +463,13 @@
    "id": "a2d220dc",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/14.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/14.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78ee1e4b",
+   "id": "9ed27952",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -495,13 +495,13 @@
    "id": "f93d2b73",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/13.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/13.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8c12c78",
+   "id": "7466b1c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -527,13 +527,13 @@
    "id": "2a973a1c",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/butterfly.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/butterfly.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbf38ae2",
+   "id": "bcfc232f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -559,7 +559,7 @@
    "id": "3be90c83",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/15.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/15.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -591,7 +591,7 @@
    "id": "6040ba58",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/16.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/16.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -623,7 +623,7 @@
    "id": "907cd5fe",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/17.jpg\" width=\"300\" height=\"300\">"
+    "<img align=left src=\"Pattern images/17.jpg\" width=\"300\" height=\"300\">"
    ]
   },
   {
@@ -655,7 +655,7 @@
    "id": "7452c50e",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/18.jpg\" width=\"175\" height=\"175\">"
+    "<img align=left src=\"Pattern images/18.jpg\" width=\"175\" height=\"175\">"
    ]
   },
   {
@@ -687,7 +687,7 @@
    "id": "40089f75",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/19.jpg\" width=\"400\" height=\"400\">"
+    "<img align=left src=\"Pattern images/19.jpg\" width=\"400\" height=\"400\">"
    ]
   },
   {
@@ -719,7 +719,7 @@
    "id": "a9acdf29",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/20.jpg\" width=\"250\" height=\"250\">"
+    "<img align=left src=\"Pattern images/20.jpg\" width=\"250\" height=\"250\">"
    ]
   },
   {
@@ -751,7 +751,7 @@
    "id": "d4b8c7d0",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/21.jpg\" width=\"375\" height=\"375\">"
+    "<img align=left src=\"Pattern images/21.jpg\" width=\"375\" height=\"375\">"
    ]
   },
   {
@@ -783,7 +783,7 @@
    "id": "28d7150e",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/28.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/28.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -815,7 +815,7 @@
    "id": "c51ff875",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/33.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/33.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -847,7 +847,7 @@
    "id": "9405e51d",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/29.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/29.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -879,7 +879,7 @@
    "id": "7c9f86cc",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/30.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/30.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -911,7 +911,7 @@
    "id": "428c6280",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/27.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/27.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -943,7 +943,7 @@
    "id": "90e0876f",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/36.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/36.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -975,7 +975,7 @@
    "id": "142db818",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/35.jpg\" width=\"250\" height=\"250\">"
+    "<img align=left src=\"Pattern images/35.jpg\" width=\"250\" height=\"250\">"
    ]
   },
   {
@@ -1007,7 +1007,7 @@
    "id": "3d5feea4",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/31.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/31.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1039,7 +1039,7 @@
    "id": "ebe0a49e",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/34.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/34.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1071,7 +1071,7 @@
    "id": "bdc6a470",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/32.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/32.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1103,7 +1103,7 @@
    "id": "5aca6cd8",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/26.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/26.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1135,7 +1135,7 @@
    "id": "c838b159",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/39.jpg\" width=\"180\" height=\"180\">"
+    "<img align=left src=\"Pattern images/39.jpg\" width=\"180\" height=\"180\">"
    ]
   },
   {
@@ -1167,7 +1167,7 @@
    "id": "b622ce71",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/40.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/40.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1199,7 +1199,7 @@
    "id": "44b81f14",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/42.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/42.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1231,7 +1231,7 @@
    "id": "ee70eb6c",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/41.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/41.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -1263,7 +1263,7 @@
    "id": "85cdc0b4",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/37.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/37.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -1295,7 +1295,7 @@
    "id": "d05accdc",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/38.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/38.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -1327,7 +1327,7 @@
    "id": "78ec2903",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/43.jpg\" width=\"175\" height=\"175\">"
+    "<img align=left src=\"Pattern images/43.jpg\" width=\"175\" height=\"175\">"
    ]
   },
   {
@@ -1359,7 +1359,7 @@
    "id": "56dc357c",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/47.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/47.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -1391,7 +1391,7 @@
    "id": "99c61702",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/48.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/48.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -1423,7 +1423,7 @@
    "id": "68b2e47d",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/49.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/49.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1455,7 +1455,7 @@
    "id": "4c1b07dd",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/53.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/53.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1487,7 +1487,7 @@
    "id": "3d9f6d8f",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/52.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/52.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1519,7 +1519,7 @@
    "id": "d636578f",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/45.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/45.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1551,7 +1551,7 @@
    "id": "0d9dbdb7",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/51.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/51.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1583,7 +1583,7 @@
    "id": "db41c1f4",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/50.jpg\" width=\"225\" height=\"225\">"
+    "<img align=left src=\"Pattern images/50.jpg\" width=\"225\" height=\"225\">"
    ]
   },
   {
@@ -1615,7 +1615,7 @@
    "id": "8fd887ad",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/44.jpg\" width=\"200\" height=\"200\">"
+    "<img align=left src=\"Pattern images/44.jpg\" width=\"200\" height=\"200\">"
    ]
   },
   {
@@ -1647,7 +1647,7 @@
    "id": "d0ed3ebf",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/46.jpg\" width=\"175\" height=\"175\">"
+    "<img align=left src=\"Pattern images/46.jpg\" width=\"175\" height=\"175\">"
    ]
   },
   {
@@ -1679,7 +1679,7 @@
    "id": "60ba724a",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/24.jpg\" width=\"250\" height=\"250\">"
+    "<img align=left src=\"Pattern images/24.jpg\" width=\"250\" height=\"250\">"
    ]
   },
   {
@@ -1711,7 +1711,7 @@
    "id": "68907e3d",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/23.jpg\" width=\"250\" height=\"250\">"
+    "<img align=left src=\"Pattern images/23.jpg\" width=\"250\" height=\"250\">"
    ]
   },
   {
@@ -1743,7 +1743,7 @@
    "id": "1f529e35",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/22.jpg\" width=\"200\" height=\"175\">"
+    "<img align=left src=\"Pattern images/22.jpg\" width=\"200\" height=\"175\">"
    ]
   },
   {
@@ -1775,7 +1775,7 @@
    "id": "2efe11d8",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/25.jpg\" width=\"450\" height=\"450\">"
+    "<img align=left src=\"Pattern images/25.jpg\" width=\"450\" height=\"450\">"
    ]
   },
   {
@@ -1809,7 +1809,7 @@
    "id": "df95ba89",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/56.jpg\" width=\"450\" height=\"450\">"
+    "<img align=left src=\"Pattern images/56.jpg\" width=\"450\" height=\"450\">"
    ]
   },
   {
@@ -1847,7 +1847,7 @@
    "id": "e4184d75",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/55.jpg\" width=\"450\" height=\"450\">"
+    "<img align=left src=\"Pattern images/55.jpg\" width=\"450\" height=\"450\">"
    ]
   },
   {
@@ -1879,7 +1879,7 @@
    "id": "80e0a33f",
    "metadata": {},
    "source": [
-    "<img align=left src=\"pattern/57.jpg\" width=\"355\" height=\"355\">"
+    "<img align=left src=\"Pattern images/57.jpg\" width=\"355\" height=\"355\">"
    ]
   },
   {
