Add Python code solutions for patterns 1 to 5

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -116,11 +116,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "47b2eadf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n):\n",
+    "        print('*', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,11 +167,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ca0e39d2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(row+1):\n",
+    "        print('*', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,11 +218,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "74958bc6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "     *\n",
+      "    **\n",
+      "   ***\n",
+      "  ****\n",
+      " *****\n",
+      "******\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n):\n",
+    "        if col >= n-row-1:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,11 +273,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "baaea2c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "*****\n",
+      " ****\n",
+      "  ***\n",
+      "   **\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n):\n",
+    "        if col < row:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -248,7 +331,12 @@
    "id": "679bcac2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row):\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
