Add Python code solutions for pattern 9 and 10

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -84,6 +84,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "083420b4",
+   "metadata": {},
+   "source": [
+    "### **Note:** \n",
+    "\n",
+    "- Please try to solve these questions without using `string multiplication` and Python string functions like `rjust`, `ljust`, and `center`. Instead of it use loops to enhance your understanding of iteration. \n",
+    "- Utilizing loops not only reinforces your understanding of iteration but also enhances your problem-solving skills, algorithmic thinking, and familiarity with control structures. \n",
+    "- Moreover, it provides valuable practice in syntax and visualization of patterns, fostering a deeper understanding of programming concepts. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dde1fe30",
    "metadata": {},
    "source": [
@@ -379,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "a035c3ac",
    "metadata": {},
    "outputs": [
@@ -387,13 +399,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Number: 6\n",
-      "     *\n",
-      "    ***\n",
-      "   *****\n",
-      "  *******\n",
-      " *********\n",
-      "***********\n"
+      "Enter Number: 5\n",
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n"
      ]
     }
    ],
@@ -434,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "b2ab87b3",
    "metadata": {},
    "outputs": [
@@ -549,12 +560,212 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b9a3604",
+   "metadata": {},
+   "source": [
+    "There are multiple ways to solve this question.\n",
+    "\n",
+    "Almost looks similar."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "id": "e1ce56c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "     *\n",
+      "    ***\n",
+      "   *****\n",
+      "  *******\n",
+      " *********\n",
+      "***********\n",
+      " *********\n",
+      "  *******\n",
+      "   *****\n",
+      "    ***\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Method 1\n",
+    "n = int(input('Enter Number: '))\n",
+    "spaces = n - 1\n",
+    "stars = n\n",
+    "for row in range(2*n-1):\n",
+    "    for col in range(stars):\n",
+    "        if col < spaces:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()\n",
+    "    if row < n-1:\n",
+    "        spaces -= 1\n",
+    "        stars += 1\n",
+    "    else:\n",
+    "        spaces += 1\n",
+    "        stars -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "42f88705",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "     *\n",
+      "    ***\n",
+      "   *****\n",
+      "  *******\n",
+      " *********\n",
+      "***********\n",
+      " *********\n",
+      "  *******\n",
+      "   *****\n",
+      "    ***\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Method 2\n",
+    "n = int(input('Enter Number: '))\n",
+    "total_rows = 2*n-1\n",
+    "for row in range(total_rows):\n",
+    "    if row < n:\n",
+    "        cols = n + row\n",
+    "        spaces = n - row - 1\n",
+    "    else:\n",
+    "        cols = total_rows - (row-n) - 1\n",
+    "        spaces = row - n + 1\n",
+    "    for col in range(cols):\n",
+    "        if col < spaces:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "17787263",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "     *\n",
+      "    ***\n",
+      "   *****\n",
+      "  *******\n",
+      " *********\n",
+      "***********\n",
+      " *********\n",
+      "  *******\n",
+      "   *****\n",
+      "    ***\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Method 3\n",
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n+row):\n",
+    "        if col < n-row-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()\n",
+    "for row in range(n-1):\n",
+    "    for col in range(2*(n-1)-row):\n",
+    "        if col < row + 1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a0ad038b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "     *\n",
+      "    ***\n",
+      "   *****\n",
+      "  *******\n",
+      " *********\n",
+      "***********\n",
+      " *********\n",
+      "  *******\n",
+      "   *****\n",
+      "    ***\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Method 4\n",
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for spaces in range(n-row-1):\n",
+    "        print(' ', end='')\n",
+    "    for stars in range(2*row+1):\n",
+    "        print('*', end='')\n",
+    "    print()\n",
+    "for row in range(n-1, 0, -1):\n",
+    "    for spaces in range(n - row):\n",
+    "        print(' ', end='')\n",
+    "    for stars in range(2*row-1):\n",
+    "        print('*', end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45291781",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Method 5\n",
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        for spaces in range(n-row-1):\n",
+    "            print(' ', end='')\n",
+    "        for stars in range(2*row+1):\n",
+    "            print('*', end='')\n",
+    "    else:\n",
+    "        for spaces in range(row-n+1):\n",
+    "            print(' ', end='')\n",
+    "        for stars in range(2*(2*n-row)-3):\n",
+    "            print('*', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -582,11 +793,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "ef53f51e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "     *\n",
+      "    * *\n",
+      "   *   *\n",
+      "  *     *\n",
+      " *       *\n",
+      "*         *\n",
+      " *       *\n",
+      "  *     *\n",
+      "   *   *\n",
+      "    * *\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "left_star = n-1\n",
+    "right_star = n-1\n",
+    "for row in range(2*n-1):\n",
+    "    for col in range(right_star+1):\n",
+    "        if col==left_star or col==right_star:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()\n",
+    "    if row < n-1:\n",
+    "        left_star -= 1\n",
+    "        right_star += 1\n",
+    "    else:\n",
+    "        left_star += 1\n",
+    "        right_star -= 1"
+   ]
   },
   {
    "cell_type": "markdown",
