--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -861,11 +861,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c0a11a4e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "*************\n",
+      "****** ******\n",
+      "*****   *****\n",
+      "****     ****\n",
+      "***       ***\n",
+      "**         **\n",
+      "*           *\n",
+      "**         **\n",
+      "***       ***\n",
+      "****     ****\n",
+      "*****   *****\n",
+      "****** ******\n",
+      "*************\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "left_star = n\n",
+    "right_star = n - 1\n",
+    "total_rows = 2*n-1\n",
+    "for row in range(total_rows):\n",
+    "    for col in range(total_rows):\n",
+    "        if row in [0, total_rows-1] or col<left_star or col>=right_star:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()\n",
+    "    if row < n-1:\n",
+    "        left_star -= 1\n",
+    "        right_star += 1\n",
+    "    else:\n",
+    "        left_star += 1\n",
+    "        right_star -= 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -893,11 +932,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9ed27952",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "     *\n",
+      "    ***\n",
+      "   * * *\n",
+      "  *  *  *\n",
+      " *   *   *\n",
+      "***********\n",
+      " *   *   *\n",
+      "  *  *  *\n",
+      "   * * *\n",
+      "    ***\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "left = n\n",
+    "right = n\n",
+    "for row in range(2*n-1):\n",
+    "    for col in range(right):\n",
+    "        if col in [left-1, n-1, right-1] or row == n-1:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()\n",
+    "    if row < n-1:\n",
+    "        left -= 1\n",
+    "        right += 1\n",
+    "    else:\n",
+    "        left += 1\n",
+    "        right -= 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -925,11 +1000,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7466b1c0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "*******\n",
+      "**   **\n",
+      "* * * *\n",
+      "*  *  *\n",
+      "* * * *\n",
+      "**   **\n",
+      "*******\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Input -> Odd number greater than 3\n",
+    "n = int(input('Enter Number: '))\n",
+    "left = 0\n",
+    "right = n-1\n",
+    "for row in range(n):\n",
+    "    for col in range(n):\n",
+    "        if col in [0, left, right, n-1] or row in [0, n-1]:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()\n",
+    "    left += 1\n",
+    "    right -= 1"
+   ]
   },
   {
    "cell_type": "markdown",
