--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -1061,11 +1061,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bcfc232f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 8\n",
+      "*             *\n",
+      "**           **\n",
+      "***         ***\n",
+      "****       ****\n",
+      "*****     *****\n",
+      "******   ******\n",
+      "******* *******\n",
+      "***************\n",
+      "***************\n",
+      "******* *******\n",
+      "******   ******\n",
+      "*****     *****\n",
+      "****       ****\n",
+      "***         ***\n",
+      "**           **\n",
+      "*             *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "total_rows = 2*n\n",
+    "left = 0\n",
+    "right = total_rows - 1\n",
+    "for row in range(total_rows):\n",
+    "    if row < n:\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "    elif row > n:\n",
+    "        left -= 1\n",
+    "        right += 1\n",
+    "    for col in range(total_rows-1):\n",
+    "        if left <= col < right:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1093,11 +1135,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "631436d8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "*********\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "left = 0\n",
+    "right = 2*n-1\n",
+    "for row in range(2*n-1):\n",
+    "    for col in range(right):\n",
+    "        if col < left:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()\n",
+    "    if row < n-1:\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "    else:\n",
+    "        left -= 1\n",
+    "        right += 1"
+   ]
   },
   {
    "cell_type": "markdown",
