Add Python code solutions for pattern 16 and 17

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -1201,11 +1201,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "785a871d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n",
+      "   ***\n",
+      "  *****\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "rows = 3*n-4\n",
+    "left = n-1\n",
+    "right = n\n",
+    "for row in range(rows):\n",
+    "    for col in range(right):\n",
+    "        if col < left:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()\n",
+    "    if row < n-1 or row >= 2*n-2:\n",
+    "        left -= 1\n",
+    "        right += 1\n",
+    "    elif row >= n-1:\n",
+    "        left += 1\n",
+    "        right -= 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1233,11 +1270,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "76372961",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "*********************\n",
+      " ********* *********\n",
+      "  *******   *******\n",
+      "   *****     *****\n",
+      "    ***       ***\n",
+      "     ***********\n",
+      "      *********\n",
+      "       *******\n",
+      "        *****\n",
+      "         ***\n",
+      "          *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "center = 2*n-1\n",
+    "for row in range(2*n-1):\n",
+    "    for col in range(4*n-3-row):\n",
+    "        if col < row or (center-row <= col < center+row-1 and 0 < row < n-1):\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()  "
+   ]
   },
   {
    "cell_type": "markdown",
