Add Python code solution for pattern 18

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -1331,11 +1331,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3c2e0889",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "   *\n",
+      "  ***\n",
+      " *****\n",
+      "*******\n",
+      "*     *\n",
+      "**   **\n",
+      "*** ***\n",
+      "*******\n",
+      "*** ***\n",
+      "**   **\n",
+      "*     *\n",
+      "*******\n",
+      " *****\n",
+      "  ***\n",
+      "   *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n+row):\n",
+    "        if col < n-row-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()\n",
+    "\n",
+    "left = 0\n",
+    "right = 2*n-1\n",
+    "for row in range(2*n-1):\n",
+    "    for col in range(2*n-1):\n",
+    "        if left < col < right-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()\n",
+    "    if row < n-1:\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "    else:\n",
+    "        left -= 1\n",
+    "        right += 1\n",
+    "    \n",
+    "for row in range(n):\n",
+    "    for col in range(2*n-1-row):\n",
+    "        if col < row:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
