Add Python code solution for pattern 19

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -1406,7 +1406,7 @@
    "id": "a354e563",
    "metadata": {},
    "source": [
-    "#### User Input = 7"
+    "#### User Input = 7 (Odd number only)"
    ]
   },
   {
@@ -1419,11 +1419,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4e3a42d7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 9\n",
+      "***************************\n",
+      " *     *  *     *  *     *\n",
+      "  *   *    *   *    *   *\n",
+      "   * *      * *      * *\n",
+      "    *        *        *\n",
+      "   * *      * *      * *\n",
+      "  *   *    *   *    *   *\n",
+      " *     *  *     *  *     *\n",
+      "***************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "end = 3*n\n",
+    "for row in range(n):\n",
+    "    if row < (n+1)/2:\n",
+    "        end -= 1\n",
+    "    else:\n",
+    "        end += 1\n",
+    "    for col in range(end+1):\n",
+    "        if col in [row, row+n, row+2*n, n-row-1, 2*n-1-row, 3*n-1-row] or row in [0, n-1]:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
